# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    "ArcAccessibilityTest:ArcAccessibilityTest",
    "ArcAnimationPerformanceTest:ArcAnimationPerformanceTest",
    "ArcStandardizedKeyboardTest:ArcStandardizedKeyboardTest",
    "ArcStandardizedMouseTest:ArcStandardizedMouseTest",
    "ArcAppValidityTest:ArcAppValidityTest",
    "ArcAudioTest:ARCAudioTest",
    "ArcBackupTest:ArcBackupTest",
    "ArcBlackFlashTest:ArcBlackFlashTest",
    "ArcCameraFpsTest:ArcCameraFpsTest",
    "ArcChromeIntentPickerTest:ArcChromeIntentPickerTest",
    "ArcClipboardTest:ArcClipboardTest",
    "ArcConfigChangesTest:ArcConfigChangesTest",
    "ArcChromeSharesheetTest:ArcChromeSharesheetTest",
    "ArcChromeWebApkTest:ArcChromeWebApkTest",
    "ArcConnectivityTest:ArcConnectivityTest",
    "ArcDownloadManagerTest:ArcDownloadManagerTest",
    "ArcDragSourceTest:ArcDragSourceTest",
    "ArcDragTargetTest:ArcDragTargetTest",
    "ArcExternalStorageTest:ArcExternalStorageTest",
    "ArcFileReaderTest:ArcFileReaderTest",
    "ArcGamePerformanceTest:ArcGamePerformanceTest",
    "ArcGamepadTest:ArcGamepadTest",
    "ArcImagePasteTest:ArcImagePasteTest",
    "ArcImeBlockingTest:ArcImeBlockingTest",
    "ArcInputCompatTest:ArcInputCompatDisabledTest",
    "ArcInputCompatTest:ArcInputCompatGameTest",
    "ArcInputCompatTest:ArcInputCompatMTest",
    "ArcInputLatencyTest:ArcInputLatencyTest",
    "ArcInputMethodTest:ArcInputMethodTest",
    "ArcKeyboardTest:ArcKeyboardTest",
    "ArcKeyCharacterMapTest:ArcKeyCharacterMapTest",
    "ArcLifecycleTest:ArcLifecycleTest",
    "ArcMidiClientTest:ArcMidiClientTest",
    "ArcMotionInputTest:ArcMotionInputTest",
    "ArcMulticastForwarderTest:ArcMulticastForwarderTest",
    "ArcMultiDisplayTest:ArcMultiDisplayTest",
    "ArcNotificationTest:ArcNotificationTest",
    "ArcPerAppDensityTest:ArcPerAppDensityTest",
    "ArcPipTest:ArcPipTest",
    "ArcPipVideoTest:ArcPipVideoTest",
    "ArcPrintTest:ArcPrintTest",
    "ArcPreImeKeyEventTest:ArcPreImeKeyEventTest",
    "ArcQuarterSizedWindowZoomingTest:ArcQuarterSizedWindowZoomingTest",
    "ArcQuotaProjectIdTest:ArcQuotaProjectIdTest",
    "ArcResizeLockTest:ArcResizeLockTest",
    "ArcSensorLatencyTest:ArcSensorLatencyTest",
    "ArcSoftInputModeTest:ArcSoftInputModeTest",
    "ArcSurfaceInsetsTest:ArcSurfaceInsetsTest",
    "ArcTtsTest:ArcTtsTest",
    "ArcWMTestApp:ArcWMTestApp_23",
    "ArcWMTestApp:ArcWMTestApp_24",
    "ArcWMTestApp:ArcWMTestApp_24_InMaximizedList",
    "ArcWMTestApp:ArcWMTestApp_24_InPhoneSizeList",
    "ArcWMTestApp:ArcWMTestApp_24_InTabletSizeList",
  ]
}
