# Copyright 2020 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    "ArcAccessibilityTest:ArcAccessibilityTest",
    "ArcAnimationPerformanceTest:ArcAnimationPerformanceTest",
    "ArcStandardizedInputTest:ArcStandardizedInputTest",
    "ArcAppValidityTest:ArcAppValidityTest",
    "ArcAudioTest:ARCAudioTest",
    "ArcBackupTest:ArcBackupTest",
    "ArcBlackFlashTest:ArcBlackFlashTest",
    "ArcCameraFpsTest:ArcCameraFpsTest",
    "ArcCameraIntentTest:ArcCameraIntentTest",
    "ArcChromeIntentPickerTest:ArcChromeIntentPickerTest",
    "ArcClipboardTest:ArcClipboardTest",
    "ArcConfigChangesTest:ArcConfigChangesTest",
    "ArcChromeSharesheetTest:ArcChromeSharesheetTest",
    "ArcChromeWebApkTest:ArcChromeWebApkTest",
    "ArcConnectivityTest:ArcConnectivityTest",
    "ArcDownloadManagerTest:ArcDownloadManagerTest",
    "ArcDragSourceTest:ArcDragSourceTest",
    "ArcDragTargetTest:ArcDragTargetTest",
    "ArcExternalStorageTest:ArcExternalStorageTest",
    "ArcFileReaderTest:ArcFileReaderTest",
    "ArcGamePerformanceTest:ArcGamePerformanceTest",
    "ArcGamepadTest:ArcGamepadTest",
    "ArcImagePasteTest:ArcImagePasteTest",
    "ArcImeBlockingTest:ArcImeBlockingTest",
    "ArcInputCompatTest:ArcInputCompatDisabledTest",
    "ArcInputCompatTest:ArcInputCompatGameTest",
    "ArcInputCompatTest:ArcInputCompatMTest",
    "ArcInputLatencyTest:ArcInputLatencyTest",
    "ArcInputMethodTest:ArcInputMethodTest",
    "ArcInputOverlayTest:ArcInputOverlayTest",
    "ArcKeyboardTest:ArcKeyboardTest",
    "ArcKeyCharacterMapTest:ArcKeyCharacterMapTest",
    "ArcLaunchIntentTest:ArcLaunchIntentTest",
    "ArcLifecycleTest:ArcLifecycleTest",
    "ArcLinkCapturingTest:ArcLinkCapturingTest",
    "ArcLongPressTest:ArcLongPressTest",
    "ArcMidiClientTest:ArcMidiClientTest",
    "ArcMediaScanPerfTest:ArcMediaScanPerfTest",
    "ArcMotionInputTest:ArcMotionInputTest",
    "ArcMouseKeyEventTest:ArcMouseKeyEventTest",
    "ArcMulticastForwarderTest:ArcMulticastForwarderTest",
    "ArcMultiDisplayTest:ArcMultiDisplayTest",
    "ArcNotificationTest:ArcNotificationTest",
    "ArcPerAppDensityTest:ArcPerAppDensityTest",
    "ArcPipTest:ArcPipTest",
    "ArcPipVideoTest:ArcPipVideoTest",
    "ArcPrintTest:ArcPrintTest",
    "ArcPreImeKeyEventTest:ArcPreImeKeyEventTest",
    "ArcQuarterSizedWindowZoomingTest:ArcQuarterSizedWindowZoomingTest",
    "ArcQuotaProjectIdTest:ArcQuotaProjectIdTest",
    "ArcRandomUIElementsApp:ArcRandomUIElementsApp",
    "ArcResizeLockTest:ArcResizeLockTest",
    "ArcSensorLatencyTest:ArcSensorLatencyTest",
    "ArcSoftInputModeTest:ArcSoftInputModeTest",
    "ArcSurfaceInsetsTest:ArcSurfaceInsetsTest",
    "ArcTtsTest:ArcTtsTest",
    "ArcInstallAppWithAppListSortedTest:ArcInstallAppWithAppListSortedTest",
    "ArcWMTestApp:ArcWMTestApp_23",
    "ArcWMTestApp:ArcWMTestApp_24",
    "ArcWMTestApp:ArcWMTestApp_24_InMaximizedList",
    "ArcWMTestApp:ArcWMTestApp_24_InPhoneSizeList",
    "ArcWMTestApp:ArcWMTestApp_24_InTabletSizeList",
    "AssistantAndroidAppTest:AssistantAndroidAppTest",
  ]
}
