# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_apk("ArcInputCompatDisabledTest") {
  manifest = "AndroidManifest.xml"
  source_dirs = ["../ArcInputCompatMTest/src"]
  resource_dirs = ["../ArcInputCompatMTest/res"]
  target_sdk_version = "28"
}
