# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_apk("ArcInputCompatDisabledTest") {
  manifest = "AndroidManifestDisabled.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "28"
}

android_apk("ArcInputCompatGameTest") {
  manifest = "AndroidManifestGame.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "28"
}

android_apk("ArcInputCompatMTest") {
  manifest = "AndroidManifestM.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "23"
}
