# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_apk("ArcMotionInputTest") {
  manifest = "AndroidManifest.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]

  # The Android Pointer Capture API was added in API level 26.
  min_sdk_version = "26"
  target_sdk_version = "28"
}
