# Copyright 2021 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

android_apk("ArcResizeLockTest") {
  manifest = "AndroidManifest.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "28"
}

android_apk("ArcResizeLockTest2") {
  manifest = "AndroidManifest.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "28"
  rename_manifest_package = "org.chromium.arc.testapp.resizelock2"
}

android_apk("ArcResizeLockTest3") {
  manifest = "AndroidManifest.xml"
  source_dirs = ["src"]
  resource_dirs = ["res"]
  target_sdk_version = "28"
  rename_manifest_package = "org.chromium.arc.testapp.resizelock3"
}