# Copyright 2019 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")

executable("graphics.GBM.gbmtest") {
  pkg_deps = [
    "gbm",
    "libdrm",
    "libchrome-${libbase_ver}",
  ]

  # libgtest.so is not installed in DUT. Instead, link against the static lib.
  libs = [
    ":libgtest.a",
    "pthread",
  ]
  sources = [
    "graphics.GBM.gbmtest.cc",
  ]
}

executable("security.AltSyscall.adjtimex") {
  sources = [
    "security.AltSyscall.adjtimex.c",
  ]
}

executable("security.AltSyscall.alt_syscall") {
  sources = [
    "security.AltSyscall.alt_syscall.c",
  ]
}

executable("security.AltSyscall.clock_adjtime") {
  sources = [
    "security.AltSyscall.clock_adjtime.c",
  ]
}

executable("security.AltSyscall.mmap") {
  sources = [
    "security.AltSyscall.mmap.c",
  ]
}

executable("security.AltSyscall.read") {
  sources = [
    "security.AltSyscall.read.c",
  ]
}


executable("security.Minijail.staticbashexec") {
  ldflags = [ "-static" ]
  sources = [
    "security.Minijail.staticbashexec.c",
  ]
}

executable("security.MinijailSeccomp.fail") {
  sources = [
    "security.MinijailSeccomp.fail.c",
  ]
}

executable("security.MinijailSeccomp.ok") {
  sources = [
    "security.MinijailSeccomp.ok.c",
  ]
}

executable("security.MinijailSeccomp.open") {
  sources = [
    "security.MinijailSeccomp.open.c",
  ]
}

executable("security.PtraceProcess.sleeper") {
  sources = [
    "security.PtraceProcess.sleeper.c",
  ]
}

executable("security.PtraceThread.thread-prctl") {
  sources = [
    "security.PtraceThread.thread-prctl.c",
  ]
  libs = [ "pthread" ]
}

group("all") {
  deps = [
    ":graphics.GBM.gbmtest",
    ":security.Minijail.staticbashexec",
    ":security.MinijailSeccomp.fail",
    ":security.MinijailSeccomp.ok",
    ":security.MinijailSeccomp.open",
    ":security.PtraceProcess.sleeper",
    ":security.PtraceThread.thread-prctl",
    ":security.AltSyscall.adjtimex",
    ":security.AltSyscall.alt_syscall",
    ":security.AltSyscall.clock_adjtime",
    ":security.AltSyscall.mmap",
    ":security.AltSyscall.read",
  ]
}
